--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,11 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "paths": {
+      "test-git-npm-push": [
+        "dist/test-git-npm-push"
+      ]
+    },
     "lib": [
       "ES2022",
       "dom"
